sample/fails/x2020_08_03_16_00_30_529_7856498.smt2
; --full-saturate-quant --inst-when=full-last-call --inst-no-entail --term-db-mode=relevant --multi-trigger-linear --no-statistics --random-seed=1 --lang=smt2 --continued-execution --tlimit 30000
(set-option :produce-unsat-cores true)
(set-logic AUFLIA)
(declare-sort V_set$ 0)
(declare-sort S_v_tm$ 0)
(declare-sort S_v_tm_set$ 0)
(declare-sort S_v_tm_list$ 0)
(declare-fun sa$ () S_v_tm$)
(declare-fun bot$ () V_set$)
(declare-fun set$ (S_v_tm_list$) S_v_tm_set$)
(declare-fun args$ (S_v_tm$) S_v_tm_list$)
(declare-fun vars$ (S_v_tm$) V_set$)
(declare-fun member$ (S_v_tm$ S_v_tm_set$) Bool)
(assert (! (not (forall ((?v0 S_v_tm$)) (=> (member$ ?v0 (set$ (args$ sa$))) (= (vars$ ?v0) bot$)))) :named a0))
(assert (! (= (vars$ sa$) bot$) :named a1))
(assert (! (forall ((?v0 S_v_tm$) (?v1 S_v_tm$)) (=> (and (member$ ?v0 (set$ (args$ ?v1))) (= (vars$ ?v1) bot$)) (= (vars$ ?v0) bot$))) :named a2))
(check-sat)
